# st

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md
.github/workflows/: build.yml
docs/: c_cpp_properties.json  decompiling.md  overlays.md  vscode.md
include/: LinkList.hpp  files.h  flags.h  global.h  input.hpp  iterator.hpp  math.hpp  profile.hpp  regs.h  types.h
include/Actor/: Actor.hpp  ActorArrow.hpp  ActorDroppedItem.hpp  ActorEventIcon.hpp  ActorHeart.hpp  ActorId.hpp  ActorItemBoomerang.hpp  ActorItemDrop.hpp  ActorItemTornado.hpp  ActorManager.hpp  ActorPot.hpp  ActorProfile.hpp  ActorRef.hpp  ActorRollingStone.hpp  ActorRupee.hpp  ActorShotArrow.hpp  ActorTable.inl  ActorType.hpp  ActorUnkAJAI.hpp  ActorUnkAJBS.hpp  ActorUnkAJCR.hpp  ActorUnkAJEM.hpp  ActorUnkAJET.hpp  ActorUnkAJMN.hpp  ActorUnkAJNP.hpp  ActorUnkAJSP.hpp  ActorUnkAJTM.hpp  ActorUnkALEV.hpp  ActorUnkAROW.hpp  ActorUnkASBA.hpp  ActorUnkASYU.hpp  ActorUnkATTG.hpp  ActorUnkBAEY.hpp  ActorUnkBAFO.hpp  ActorUnkBANI.hpp  ActorUnkBAPH.hpp  ActorUnkBBLE.hpp  ActorUnkBDBA.hpp  ActorUnkBDEA.hpp  ActorUnkBDEM.hpp  (+454 more)
include/Animation/: CellAnimObject.hpp
include/Course/: Course.hpp
include/Cutscene/: Cutscene.hpp
include/FileSelect/: Common.hpp  FileSelect.hpp  FileSelectMain.hpp  FileSelectMicTest.hpp  FileSelectOptions.hpp  FileSelectOptionsManager.hpp  FileSelectUnkDraw.hpp  UnkSubStruct9.hpp
include/Game/: Game.hpp  GameMode.hpp  GameModeAdventure.hpp  GameModeBattle.hpp  GameModeContactMode.hpp  GameModeDownloadPlay.hpp  GameModeFileSelect.hpp  GameModeManager.hpp  GameModeStartUp.hpp  GameModeTitleScreen.hpp
include/Item/: Item.hpp  ItemManager.hpp
include/MainGame/: AdventureMode.hpp  CargoManager.hpp  MainGame.hpp  MiscAdvManager.hpp  PassengerManager.hpp  UnkAdventureModeSystem1.hpp  UnkTrainSystems.hpp
include/Map/: MapObjectId.hpp  MapObjectTable.inl  MapObjectTypeTable.inl
include/MapObject/: MapObject.hpp  MapObjectChestBase.hpp  MapObjectDoorBase.hpp  MapObjectDoorClick.hpp  MapObjectDoorDangerSpawn.hpp  MapObjectDoorKey.hpp  MapObjectDoorSwitch.hpp  MapObjectDoorTouch.hpp  MapObjectManager.hpp  MapObjectMiniBlocks.hpp  MapObjectPot.hpp  MapObjectProfile.hpp  MapObjectProfile_Derived2_20.hpp  MapObjectSwitchStep.hpp  MapObjectTreasureSpawned.hpp  MapObjectUnkARWL.hpp  MapObjectUnkBAPL.hpp  MapObjectUnkBBFL.hpp  MapObjectUnkBFFL.hpp  MapObjectUnkBFSP.hpp  MapObjectUnkBLCC.hpp  MapObjectUnkBLCE.hpp  MapObjectUnkBLCK.hpp  MapObjectUnkBLCM.hpp  MapObjectUnkBLCT.hpp  MapObjectUnkBLHL.hpp  MapObjectUnkBLRB.hpp  MapObjectUnkBLSR.hpp  MapObjectUnkBMFL.hpp  MapObjectUnkBOGN.hpp  MapObjectUnkBREX.hpp  MapObjectUnkBRGL.hpp  MapObjectUnkBRGS.hpp  MapObjectUnkBRGW.hpp  MapObjectUnkCLMN.hpp  MapObjectUnkCRWL.hpp  MapObjectUnkCSTL.hpp  MapObjectUnkCTPT.hpp  (+224 more)
tools/: configure.py  courselist.py  download_tool.py  fix_objdiff_config.py  format_delinks.py  g2_unpack.py  m2ctx.py  name_actor.py  new_class.py  objdiff_config.py  project.py  vtable_sym.py
(+3588 files in other folders)
